# phenotype-apps

./: .commitlintrc.json  .dockerignore  .editorconfig  .gitattributes.example  .gitignore  .pre-commit-config.yaml  .rust-audit.toml  .secrets.baseline  0001-docs-add-work-state-header-to-README-42.patch  2026-06-15_23-34-07-dump.json  AGENTS.md  ARCHITECTURE.md  ARCH_DIAGRAM_HARVEST_2026_06_11.md  AUDIT_30_PILLAR_FINAL.md  AUDIT_BLOC_VS_2026_SOTA.md  BRANCH_AUDIT_2026_06_10.md  CHANGELOG.md  CHEAP_LLM_SPEC_HARVEST_2026_06_10.md  CHEAP_LLM_SPEC_HARVEST_2026_06_11.md  CLAUDE.md  CNAME  Cargo.toml  DAG_100.md  DAG_VS_V3_DELTA_2026_06_10.md  DENY_TOML_DIVERGENCE_2026_06_10.md  DISPATCH_CONSOLIDATION_HARVEST_2026_06_11.md  FIFTH_FOCUS_REPO_DECISION_2026_06_10.md  FINAL_SUMMARY_2026_06_15.md  FLEET_100TASK_DAG.md  FLEET_100TASK_DAG_V2_MERGED.md  FLEET_100TASK_DAG_V3.md  FLEET_100TASK_DAG_V3_AUTONOMOUS_PROGRESS_2026_06_15.md  FLEET_100TASK_DAG_v2.md  FLEET_DAG.db  FLEET_DAG_v3.db  FLEET_DAG_v3.md  HARVEST_W1_W2_W3_2026_06_15.md  HARVEST_W4_5REPO_L1_2026_06_15.md  Justfile  L6_PHENO_REPOS_HEALTH_2026_06_14.md  (+84 more)
Parpoura-5th/: .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  404.html  ADR.md  AGENTS.md  API_EVENTS_SPEC.md  ARTIFACT_COMPILER_SPEC.md  CHANGELOG.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  ChatGPT_Conversation_2026-02-21.md  DATA_MODEL_DB_SPEC.md  FUNCTIONAL_REQUIREMENTS.md  GOVERNANCE_SCAFFOLD_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INFRASTRUCTURE_AND_TEST_SPECS.md  Joule-based Technocratic Economy.html  NEXT_STEPS.md  OPS_COMPLIANCE_SPEC.md  PLAN.md  PRD.html  PRD.md  PRODUCT_MODEL.md  QUALITY_GATES.html  QUICK_START.md  README.md  ROLE_TOOL_ALLOWLIST_MATRIX.md  SCHEMA_PACK.md  SECURITY.md  SPEC.html  SPECS_DELIVERY_INDEX.md  SPECS_INDEX.md  TECHNICAL_SPEC.md  TRACK_A_ARTIFACT_DETERMINISM_SPEC.md  TRACK_B_TREASURY_COMPLIANCE_SPEC.md  (+15 more)
Parpoura-5th/.github/: PULL_REQUEST_TEMPLATE.md
Parpoura-5th/Joule-based Technocratic Economy_files/: js
Parpoura-5th/adr/: ADR-001-workspace-structure.html  ADR-002-headless-artifact-compiler.html  ADR-003-joule-treasury-integration.html
Parpoura-5th/assets/: CHANGELOG.md.Ivc6swKc.js  PRD.md.CgnZWaMs.js  PRD.md.CgnZWaMs.lean.js  QUALITY_GATES.md.DCJy8BRo.js  QUALITY_GATES.md.DCJy8BRo.lean.js  SPEC.md.DkG6TPvD.lean.js  WORKLOG.md.Spbg3Ltz.js  WORKLOG.md.Spbg3Ltz.lean.js  adr_ADR-001-workspace-structure.md.C1DdXF_d.js  adr_ADR-001-workspace-structure.md.C1DdXF_d.lean.js  adr_ADR-002-headless-artifact-compiler.md.B901F5nD.js  adr_ADR-002-headless-artifact-compiler.md.B901F5nD.lean.js  adr_ADR-003-joule-treasury-integration.md.bFwoXbFq.js  adr_ADR-003-joule-treasury-integration.md.bFwoXbFq.lean.js  app.CQYe1ljk.js  changes_README.md.Dva-Rhxe.js  checklists_RELEASE_CHECKLIST.md.BCBkEqf3.js  fa-Latn_index.md.5N6VCQaI.js  fa_index.md.BVAJwHE9.lean.js  governance_GOVERNANCE_SUMMARY.md.BiSzCzxY.js  governance_GOVERNANCE_SUMMARY.md.BiSzCzxY.lean.js  governance_QUALITY_GATES.md.D6zqH47w.js  governance_QUALITY_GATES.md.D6zqH47w.lean.js  guides_AGILE_WORKSTREAM.md.B-Xl0U6q.js  guides_AGILE_WORKSTREAM.md.B-Xl0U6q.lean.js  guides_COPILOT_L3_AGENTS.md.CIZdtgLK.js  guides_COPILOT_L3_AGENTS.md.CIZdtgLK.lean.js  guides_GIT_WORKTREE_GUIDE.md.WAtc7Cgi.js  guides_GIT_WORKTREE_GUIDE.md.WAtc7Cgi.lean.js  guides_TEST_FIRST_GUIDE.md.5o8Uy2z3.js  guides_TEST_FIRST_GUIDE.md.5o8Uy2z3.lean.js  guides_agent-orchestration.md.BofIZDH1.js  guides_agent-orchestration.md.BofIZDH1.lean.js  guides_anti-patterns.md.DV6J3FI6.js  guides_anti-patterns.md.DV6J3FI6.lean.js  guides_index.md.D90XOC9O.js  guides_index.md.D90XOC9O.lean.js  guides_quick-start_README.md.DiG64G5i.lean.js  index.md.8VjPUoKx.js  index.md.8VjPUoKx.lean.js  (+59 more)
Parpoura-5th/changes/: README.html
Parpoura-5th/checklists/: RELEASE_CHECKLIST.html
Parpoura-5th/docs/: BACKLOG.md  CHANGELOG.md  FR_DETAILED.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  SPEC.md  TECHNICAL_SPEC.md  WORKLOG.md  package.json
Parpoura-5th/fa/: index.html
Parpoura-5th/fa-Latn/: index.html
Parpoura-5th/governance/: GOVERNANCE_SUMMARY.html  QUALITY_GATES.html
Parpoura-5th/guides/: AGILE_WORKSTREAM.html  COPILOT_L3_AGENTS.html  GIT_WORKTREE_GUIDE.html  TEST_FIRST_GUIDE.html  agent-orchestration.html  anti-patterns.html  index.html
Parpoura-5th/hooks/: suppress-custom-retry.sh  suppress-direct-http.sh  suppress-hardcoded-strings.sh  suppress-isolated-classes.sh  suppress-print-statements.sh  suppress-v2-files.sh
Parpoura-5th/reference/: ADR_STATUS.html  CIVLAB_GAME_DESIGN.html  CODE_ENTITY_MAP.html  ECOSYSTEM_MAP.html  FR_TRACKER.html  INDEX.html  INFRASTRUCTURE_SPEC.html  INTERFACE_CONTRACTS.html  JOURNEY_VALIDATION.html  PLAN_STATUS.html  (+6 more)
chaos-injection/: Cargo.toml  GAME-DAY-SCHEDULE.json  PRODUCTION.md
fuzz/: Cargo.toml
pheno-chaos/: Cargo.toml
pheno-cli-base/: AGENTS.md  Cargo.toml  README.md  SPEC.md  deny.toml  llms.txt
pheno-config/: .codespellrc  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROMOTION.md  README.md  SECURITY.md  WORKLOG.md  deny.toml  llms.txt  llvm-cov.toml
pheno-context/: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  WORKLOG.md  llms.txt  llvm-cov.toml
pheno-errors/: Cargo.toml  llms.txt  llvm-cov.toml
pheno-events/: Cargo.toml
pheno-fastapi-base/: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE-MIT  README.md  SPEC.md  WORKLOG.md  deny.toml  llms.txt  pyproject.toml
pheno-flags/: Cargo.toml
pheno-otel/: .cargo-mutants.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  SBOM_DIFF.md  SPEC.md  WORKLOG.md  llms.txt  sbom.cdx.json
pheno-port-adapter/: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  PROMOTION.md  README.md  WORKLOG.md  llms.txt  llvm-cov.toml
pheno-pydantic-models/: README.md  SPEC.md  deny.toml  pyproject.toml
phenotype-cli-macros/: Cargo.toml
phenotype-deps/: Cargo.toml
phenotype-error-core/: Cargo.toml
phenotype-error-core-derive/: Cargo.toml
phenotype-mcp-sdk-py/: .gitignore  README.md  pyproject.toml
(+11338 files in other folders)
