[workspace]
resolver = "2"
exclude = ["tooling/fr-coverage", "tooling/target-pruner", "examples/rule-library/tests", "fuzz", "assets/motion", "phenotype-otel", "kmobile", "phenotype-voxel", "Pine"]
members = [
    "tooling/agent-orchestrator",
    "tooling/bench-guard",
    "tooling/release-cut",
    "crates/focus-always-on",
    "crates/focus-backup",
    "crates/focus-domain",
    "crates/focus-entitlements",
    "crates/focus-eval",
    "crates/focus-events",
    "crates/focus-connectors",
    "crates/focus-ir",
    "crates/focus-lang",
    "crates/focus-rules",
    "crates/focus-replay",
    "crates/focus-rewards",
    "crates/focus-penalties",
    "crates/focus-policy",
    "crates/focus-sync",
    "crates/focus-sync-store",
    "crates/focus-storage",
    "crates/focus-audit",
    "crates/pheno-tracing",
    "crates/focus-crypto",
    "crates/focus-time",
    "crates/focus-ffi",
    "crates/focus-demo-seed",
    "crates/connector-canvas",
    "crates/connector-fitbit",
    "crates/connector-gcal",
    "crates/connector-github",
    "crates/connector-strava",
    "crates/connector-testkit",
    "crates/focus-connectors-mock-familycontrols",
    "crates/focus-cli",
    "crates/focus-mascot",
    "crates/focus-coaching",
    "crates/focus-planning",
    "crates/focus-scheduler",
    "crates/focus-calendar",
    "crates/focus-rituals",
    "crates/focus-templates",
    "crates/focus-transpilers",
    "crates/focus-rule-suggester",
    "crates/focus-mcp-server",
    "crates/focus-release-bot",
    "crates/focus-asset-fetcher",
    "crates/focus-webhook-server",
    "crates/focus-ci-watcher",
    "crates/focus-icon-gen",
    "crates/focus-ui",
    "crates/focus-observability",
    "crates/focus-telemetry",
    "crates/connector-readwise",
    "crates/connector-notion",
    "crates/connector-linear",
    "tests/e2e",
    "crates/focus-plugin-sdk",
    "crates/phenotype-crypto",
    "crates/phenotype-error-core",
    "crates/focus-errors",
    "crates/focus-result",
    "crates/phenotype-contracts",
    "crates/phenotype-event-sourcing",
    "crates/phenotype-test-utils",
    "crates/phenotype-derive",
    "crates/phenotype-workflow",
    "crates/phenotype-policy-engine",
    "pheno-context",
]

[workspace.package]
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP / OAuth
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
oauth2 = "5.0"
url = "2.5"

# Storage
rusqlite = { version = "0.33", features = ["bundled"] }

# Crypto
sha2 = "0.10"
ring = "0.17"
secrecy = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
hmac = "0.12"
zeroize = "1.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
parking_lot = "0.12"
rayon = "1.10"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap-ext = "0.1"

# GraphQL (for graphql-gateway service)
async-graphql = { version = ">=0.13", features = ["chrono", "uuid"] }
async-graphql-axum = ">=0.13"
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# FFI
uniffi = "0.28"

# Config / Signing
toml = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core", "std"] }
rand_core = "0.6"

# MCP SDK
mcp-sdk = "0.0.3"

# Platform-specific paths
dirs = "5.0"

# Benchmarking
criterion = { version = "0.5", default-features = false }

# Backup / Archive
tar = "0.4"
hex = "0.4"
zstd = "0.13"

# Bulk Import/Export
csv = "1.3"
serde_yaml = "0.9"

# Workspace-local crates
focus-connectors = { path = "crates/focus-connectors" }
focus-events = { path = "crates/focus-events" }
focus-ir = { path = "crates/focus-ir" }
focus-lang = { path = "crates/focus-lang" }
focus-rules = { path = "crates/focus-rules" }
focus-rewards = { path = "crates/focus-rewards" }
focus-penalties = { path = "crates/focus-penalties" }
focus-policy = { path = "crates/focus-policy" }
focus-storage = { path = "crates/focus-storage" }

# Phenotype shared crates
phenotype-error-core = { path = "crates/phenotype-error-core" }
phenotype-contracts = { path = "crates/phenotype-contracts" }
phenotype-event-sourcing = { path = "crates/phenotype-event-sourcing" }
phenotype-test-utils = { path = "crates/phenotype-test-utils" }
phenotype-derive = { path = "crates/phenotype-derive" }
phenotype-workflow = { path = "crates/phenotype-workflow" }
phenotype-policy-engine = { path = "crates/phenotype-policy-engine" }
focus-audit = { path = "crates/focus-audit" }
focus-time = { path = "crates/focus-time" }
focus-domain = { path = "crates/focus-domain" }
focus-demo-seed = { path = "crates/focus-demo-seed" }
focus-observability = { path = "crates/focus-observability" }
focus-telemetry = { path = "crates/focus-telemetry" }
pheno-tracing = { path = "crates/pheno-tracing" }
