[project]
name = "parpour"
version = "0.1.0"
description = "Autonomous AI economic civilization platform"
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Venture Team" }
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    
    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    
    # Message bus
    "nats-py>=0.24.0",
    
    # Cache
    "redis>=5.0.0",
    
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    
    # Event sourcing
    "eventsourcing>=5.0.0",
    
    # Authentication
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Logging & observability
    "structlog>=24.0.0",
    "opentelemetry-api>=1.25.0",
    
    # Configuration
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["venture"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
