[package]
name = "chaos-injection"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fault-injection framework for the pheno-* fleet (L36). Provides Fault enum, scheduled injection, and per-fault intercepts for network, disk, async runtime, and rate-limit scenarios."
keywords = ["phenotype", "chaos", "fault-injection", "resilience", "substrate"]
categories = ["development-tools", "no-std"]
publish = false

# Standalone crate — same pattern as the other pheno-* substrate crates
# in this monorepo (each carries its own [workspace] to opt out of any
# parent workspace aggregation). Consumers add chaos-injection to their
# own workspace or depend on it via a path/git dep.
[workspace]

[lib]
name = "chaos_injection"
path = "src/lib.rs"

[dependencies]
# L36 (chaos / fault-injection) — proptest drives the fault-schedule
# distribution; tokio provides the async fault runtime; rand supplies
# the PRNG for stochastic schedules; tracing emits structured
# fault-injected/observed events via pheno-tracing-shaped spans.
proptest = "1.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
rand = "0.8"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
