[package]
name = "pheno-cli-base"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Shared CLI patterns for Phenotype CLIs: Verbosity, ConfigArg, and setup_tracing."
keywords = ["cli", "clap", "tracing", "phenotype", "boilerplate"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
publish = false

# An empty [workspace] table declares this crate as a standalone
# package. Without it, cargo looks upward and finds the surrounding
# monorepo workspace.
[workspace]

[lib]
name = "pheno_cli_base"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
# ADR-036 (adapted for pheno-cli-base): `tracing-subscriber` stays a
# hard dep because `Verbosity::to_filter` returns
# `tracing_subscriber::filter::LevelFilter`; making it optional would
# break the default build. The `tracing` crate itself is gated on
# the `tracing` feature because `setup_tracing` only does useful
# work when the OTLP-emitting macros are compiled in.
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# ADR-036: tracing feature flag (off by default). Enables the
# `tracing` crate so `setup_tracing` and friends can be called; the
# `tracing-subscriber` plumbing is always available.
tracing = ["dep:tracing"]

[dev-dependencies]
# ADR-036: test that tracing spans emit (use OTEL_SDK_DISABLED=true in CI)
# `tracing-test` is a regular (non-optional) dev-dep; the test that
# uses it is feature-gated so it is only compiled with `--features tracing`.
tracing-test = "0.2"
