[package]
name = "pheno-cli-base"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "Shared CLI patterns for Phenotype CLIs: Verbosity, ConfigArg, and setup_tracing."
keywords = ["cli", "clap", "tracing", "phenotype", "boilerplate"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
publish = false

# An empty [workspace] table declares this crate as a standalone
# package. Without it, cargo looks upward and finds the surrounding
# monorepo workspace (which currently has unrelated tooling members).
[workspace]

[lib]
name = "pheno_cli_base"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
