[package]
name = "pheno-errors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canonical AppError type for the pheno-* fleet, consolidating the 5 most-common error patterns (Domain, NotFound, Conflict, Validation, Storage)."
repository = "https://github.com/KooshaPari/phenotype"
keywords = ["error", "phenotype", "pheno-errors", "thiserror", "anyhow"]
categories = ["rust-patterns", "error-handling"]
publish = false

# Empty [workspace] table declares this crate as a standalone package,
# intentionally NOT a member of the root FocalPoint/Phenotype workspace
# (which contains 56+ focus-* / connector-* crates). Consumers add it
# to their own workspace or depend on it via a path/git dep.
[workspace]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
# ADR-036 + ADR-042: tracing is optional, gated by the `tracing` feature.
# Default off; consumers add `pheno-errors = { version = "0.1", features = ["tracing"] }`
# to opt into the OTLP substrate.
tracing = { version = "0.1", optional = true }

[features]
default = []
# ADR-036: opt into `tracing` for `tracing::error!` integration on AppError::source()
tracing = ["dep:tracing"]

[dev-dependencies]
anyhow = "1.0"
thiserror = "2.0"
# ADR-036: test that tracing spans emit (use OTEL_SDK_DISABLED=true in CI)
tracing-test = { version = "0.2", optional = true }
