[package]
name = "pheno-errors"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KooshaPari/pheno-errors"
description = "Canonical AppError type for the pheno-* fleet. Consolidates the 5 most-common error patterns into a single, dependency-light crate."

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
# Canonical OTLP wire-format export substrate (ADR-037).
# `pheno-errors` uses `pheno-otel` to surface structured error context
# to OTLP/HTTP collectors when wired into a wider observability stack.
pheno-otel = { path = "../pheno-otel" }

[dev-dependencies]
proptest = "1"
tracing-test = "0.2"
# v16 T6 L25 (test isolation): per-test tempfile fixtures + loom concurrency.
tempfile = "3.10"
loom = "0.7"
