[package]
name = "pheno-events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canonical event substrate for the pheno-* fleet. Defines EventEnvelope + Ack + EnvelopeError types with Arbitrary derives for property-based testing."
keywords = ["phenotype", "events", "pubsub", "envelope", "substrate"]
categories = ["asynchronous", "data-structures"]
publish = false

[workspace]

[lib]
name = "pheno_events"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
proptest = "1.4"
proptest-derive = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
# v20-T4 L27 — Pact consumer-driven contract tests for the event-bus ↔
# subscriber contract. The `pact_consumer` crate provides both the
# V3-style HTTP pact builder (used by `provider.rs`) and the V4 async
# message pact builder (used by `consumer.rs`). We pin to `0.10` so we
# stay on the same major as the rest of the substrate fleet (which still
# references `pact_consumer = "0.10"` from the ADR-084 scaffold).
pact_consumer = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# v20-T3 (L36) — chaos-injection substrate; the
# `tests/chaos_network_timeout.rs` adoption test injects a
# `NetworkTimeout` fault and asserts the runtime surfaces it
# through `chaos_injection::inject`.
chaos-injection = { path = "../chaos-injection" }