[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pheno-fastapi-base"
version = "0.1.0"
description = "Canonical FastAPI base for the pheno-* service fleet: structured logging, /healthz + /readyz, AppError handler, and AsyncTestClient."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "PhenoFleet", email = "fleet@phenotype.local" },
]
keywords = ["fastapi", "pheno", "base", "starlette", "structlog", "pydantic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "structlog>=24.1",
  "httpx>=0.27",  # required by pheno_fastapi_base.testing.AsyncTestClient
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
"Homepage" = "https://phenotype.local"
"Source" = "https://phenotype.local/pheno-fastapi-base"
"Issues" = "https://phenotype.local/pheno-fastapi-base/issues"

# ---------------------------------------------------------------------------
# Hatchling build config
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["pheno_fastapi_base"]

[tool.hatch.build.targets.sdist]
include = [
  "pheno_fastapi_base/",
  "tests/",
  "README.md",
  "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "asyncio: marks tests as asyncio (auto-applied in asyncio_mode=auto).",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["pheno_fastapi_base", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line-too-long (we keep 100 but tolerate long lines in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
exclude = ["build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
