[package]
name = "pheno-otel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "OpenTelemetry OTLP exporter substrate for the pheno-* fleet (ADR-037). Provides OtlpPort + Stdout/HttpExporter adapters; consumers depend on this for OTLP wire-format export of traces, metrics, and logs."
repository = "https://github.com/KooshaPari/pheno-otel"
documentation = "https://docs.rs/pheno-otel"
keywords = ["phenotype", "opentelemetry", "otlp", "otel", "observability", "substrate", "tracing"]
categories = ["development-tools", "api-bindings", "asynchronous"]
readme = "README.md"
publish = true

# Empty [workspace] table declares this crate as a standalone package,
# intentionally NOT a member of the root monorepo workspace (which contains
# 100+ sub-crates). Consumers add it to their own workspace or depend on
# it via a path/git dep.
[workspace]

[lib]
name = "pheno_otel"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# v20-T5 (L23): proptest is in [dependencies] (not just [dev-dependencies])
# so the manual `Arbitrary` impls in `src/lib.rs` for `OtlpError` and
# `ExportHandle` compile. The proptest book requires this: a crate that
# provides `Arbitrary` impls in src/ must have proptest as a regular
# dep (not just a dev-dep) so the generated `impl Arbitrary` blocks can
# reference the trait. Tests in `tests/proptest_smoke.rs` then exercise
# these impls via `any::<T>()`.
proptest = { version = "1.4", default-features = false, features = ["std"] }

[dev-dependencies]
# v20-T5 (L23): proptest also in dev-deps for the loom concurrency
# tests (tests/loom_batcher.rs, tests/loom_shutdown.rs). The
# `[dependencies]` entry above is what makes the `Arbitrary` impls
# in src/ compile; this one is what makes the loom tests compile
# when the `loom` cfg is enabled.
proptest = "1.4"
# Concurrency model checker (v14 cycle-4 T5: L25 pillar).
# Permutation-tests the OTLP exporter's batcher flush ordering
# (`tests/loom_batcher.rs`) and graceful shutdown signal ordering
# (`tests/loom_shutdown.rs`). Stable Rust 1.75+ compatible; no nightly
# required. Run with:
#   LOOM_MAX_PREEMPTIONS=1 RUSTFLAGS="--cfg loom" cargo test --test loom_<name> --release
loom = "0.7"
