[package]
name = "pheno-port-adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace]

[dependencies]
thiserror = "2.0"
# Async runtime backing the hex-port traits (HexCachePort, HexTimePort, ...).
# Kept as a normal dep (not just dev-deps) because the hex-port adapters
# return `impl Future` from their `async fn` methods; tokio's macros and
# runtime are needed at compile time even when callers drive the adapters
# from a different executor.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# `async-trait` keeps the hex-port traits object-safe so callers can hold
# `Box<dyn HexCachePort>` for late binding (e.g. in trait-object service
# locators). All hex-port adapters use the macro form for consistency.
async-trait = "0.1"
# Redis client used by `adapters::redis_cache::RedisAdapter` to speak the
# RESP wire protocol. Feature `tokio-comp` keeps the runtime story aligned
# with the rest of the crate (single tokio runtime, no extra executors).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager"] }
# Canonical OTLP wire-format export substrate (ADR-037).
# `pheno-port-adapter` uses `pheno-otel` to surface
# connection-lifecycle spans (connect/disconnect/error) to OTLP/HTTP
# collectors when wired into a wider observability stack (per
# ADR-023 Rule 3.1: every substrate ships observability).
pheno-otel = { path = "../pheno-otel" }
# Canonical tracing substrate (ADR-012 / ADR-036B / ADR-037). Provides the
# `TracePort` trait plus in-memory/stdout adapters; consumers instrument
# public APIs with `#[tracing::instrument]` and route spans through this
# crate. The OTLP wire-format export that physically ships spans to a
# collector lives in `pheno-otel`; `pheno-tracing` is the *producer* side.
pheno-tracing = { path = "../pheno-tracing" }
# Direct dep on `tracing` for the `#[tracing::instrument]` attribute
# macro. `pheno-tracing` re-exports the `instrument` macro but the
# proc-macro attribute on functions is resolved against the `tracing`
# crate itself, so a direct dep is required. Pinned to the same major
# version as `pheno-tracing`'s internal `tracing` dep.
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
